feat: update licenses + infra pulumi blog post

--- a/_posts/infra/2023-01-14-pulumi.md
+++ b/_posts/infra/2023-01-14-pulumi.md
@@ -20,7 +20,7 @@ As I explored the Pulumi ecosystem, I discovered that it was more than just a to
 
 My first project with Pulumi was the flexfitcorner.com blog. The whole process of setting up the infrastructure, from creating the storage to deploying the blog, was like a breath of fresh air. No more switching between languages or dealing with obtuse configuration files. Just a few lines of code, and I had everything I needed.
 
-I was amazed by how easy it was to integrate Pulumi with other tools and services. For instance, I was able to connect my web app to a serverless function using AWS Lambda with minimal effort, all within the same Pulumi project. It was like discovering a whole new superpower.
+I was amazed by how easy it was to integrate Pulumi with other tools and services. For instance, I was able to create an S3 bucket, synchronise a folder containing my website code, configure it as a website, use that bucket to create a CloudFront CDN instance to cache my website and registrer that cdn endpoint with my domain in AWS Route 53, all within the same Pulumi project and in less that a 100 lines of code. It was like discovering a whole new superpower.
 
 In conclusion, discovering Pulumi was an epiphany for me, and I can't imagine my life as a web developer without it.
 It's not just another mainstream tool, but rather an innovative approach to simplifying and unifying the web development experience. If you're a developer who's tired of juggling between languages and wrestling with infrastructure, I encourage you to give Pulumi a try.
