feat: remove mentions of flexfitcorner

--- a/_posts/infra/2023-01-14-pulumi.md
+++ b/_posts/infra/2023-01-14-pulumi.md
@@ -18,7 +18,7 @@ Pulumi is an IaC tool that allows developers to define, provision, and manage cl
 
 As I explored the Pulumi ecosystem, I discovered that it was more than just a tool. It was a community filled with passionate developers who were eager to share their knowledge, and Pulumi itself was under constant development, with new features being added regularly. I was instantly hooked.
 
-My first project with Pulumi was the flexfitcorner.com blog. The whole process of setting up the infrastructure, from creating the storage to deploying the blog, was like a breath of fresh air. No more switching between languages or dealing with obtuse configuration files. Just a few lines of code, and I had everything I needed.
+The whole process of setting up the infrastructure, from creating the storage to deploying the blog, was like a breath of fresh air. No more switching between languages or dealing with obtuse configuration files. Just a few lines of code, and I had everything I needed.
 
 I was amazed by how easy it was to integrate Pulumi with other tools and services. For instance, I was able to create an S3 bucket, synchronise a folder containing my website code, configure it as a website, use that bucket to create a CloudFront CDN instance to cache my website and registrer that cdn endpoint with my domain in AWS Route 53, all within the same Pulumi project and in less that a 100 lines of code. It was like discovering a whole new superpower.
 
